--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+libcan (0.1-40) unstable; urgency=low
+
+  * Added missing build dependencies
+
+ -- Ralf Kaestner <ralf.kaestner@gmail.com>  Thu, 11 Jul 2013 11:23:00 +0100
+
 libcan (0.1-39) unstable; urgency=low
 
   * Lucid and precise distributions
