--- a/changelog
+++ b/changelog
@@ -1,131 +1,138 @@
 libcan (0.1-40) unstable; urgency=low
 
+  * No changes, making changelog revision consistent with number of git
+    commits
+
+ -- Ralf Kaestner <ralf.kaestner@gmail.com>  Thu, 11 Jul 2013 11:26:00 +0100
+
+libcan (0.1-39) unstable; urgency=low
+
   * Added missing build dependencies
 
  -- Ralf Kaestner <ralf.kaestner@gmail.com>  Thu, 11 Jul 2013 11:23:00 +0100
 
-libcan (0.1-39) unstable; urgency=low
+libcan (0.1-38) unstable; urgency=low
 
   * Lucid and precise distributions
 
  -- Ralf Kaestner <ralf.kaestner@gmail.com>  Thu, 11 Jul 2013 11:16:00 +0100
 
-libcan (0.1-38) unstable; urgency=low
+libcan (0.1-37) unstable; urgency=low
 
   * Added SVN changelog
 
  -- Ralf Kaestner <ralf.kaestner@gmail.com>  Thu, 11 Jul 2013 11:06:00 +0100
 
-libcan (0.1-37) unstable; urgency=low
+libcan (0.1-36) unstable; urgency=low
 
   * Adapted configuration support of command line arguments
 
  -- Ralf Kaestner <ralf.kaestner@gmail.com>  Fri, 11 Feb 2011 11:37:15 +0100
 
-libcan (0.1-36) unstable; urgency=low
+libcan (0.1-35) unstable; urgency=low
 
   * Removed man documentation
 
  -- Ralf Kaestner <ralf.kaestner@gmail.com>  Sun, 04 Jul 2010 19:01:57 +0200
 
-libcan (0.1-35) unstable; urgency=low
+libcan (0.1-34) unstable; urgency=low
 
   * Fixed Doxygen documentation
 
  -- Ralf Kaestner <ralf.kaestner@gmail.com>  Sun, 04 Jul 2010 19:00:57 +0200
 
-libcan (0.1-34) unstable; urgency=low
+libcan (0.1-33) unstable; urgency=low
 
   * Enhanced packaging information
 
  -- Ralf Kaestner <ralf.kaestner@gmail.com>  Thu, 03 Jun 2010 16:18:42 +0200
 
-libcan (0.1-33) unstable; urgency=low
+libcan (0.1-32) unstable; urgency=low
 
   * Removed dashes from argument prefix
 
  -- Ralf Kaestner <ralf.kaestner@gmail.com>  Wed, 26 May 2010 15:39:04 +0200
 
-libcan (0.1-32) unstable; urgency=low
+libcan (0.1-31) unstable; urgency=low
 
   * Corrected package dependencies
 
  -- Ralf Kaestner <ralf.kaestner@gmail.com>  Tue, 01 Dec 2009 17:01:15 +0100
 
-libcan (0.1-31) unstable; urgency=low
+libcan (0.1-30) unstable; urgency=low
 
   * Added _ISOC99_SOURCE to suppress round() compiler warnings
 
  -- Ralf Kaestner <ralf.kaestner@gmail.com>  Wed, 25 Nov 2009 23:07:21 +0100
 
-libcan (0.1-30) unstable; urgency=low
+libcan (0.1-29) unstable; urgency=low
 
   * Added message length support to can_message_t
 
  -- Ralf Kaestner <ralf.kaestner@gmail.com>  Wed, 25 Nov 2009 18:49:07 +0100
 
-libcan (0.1-29) unstable; urgency=low
+libcan (0.1-28) unstable; urgency=low
 
   * Fixed precision bug in CAN CPC brp computation
 
  -- Ralf Kaestner <ralf.kaestner@gmail.com>  Mon, 26 Oct 2009 11:43:15 +0100
 
-libcan (0.1-28) unstable; urgency=low
+libcan (0.1-27) unstable; urgency=low
 
   * Added bitrate configuration support to CAN-CPC, might be buggy due to
     a lack of documentation of CAN bit-timing
 
  -- Ralf Kaestner <ralf.kaestner@gmail.com>  Mon, 26 Oct 2009 10:54:35 +0100
 
-libcan (0.1-27) unstable; urgency=low
+libcan (0.1-26) unstable; urgency=low
 
   * Removed obsolete directories
 
  -- Ralf Kaestner <ralf.kaestner@gmail.com>  Thu, 24 Sep 2009 11:24:23 +0200
 
-libcan (0.1-26) unstable; urgency=low
+libcan (0.1-25) unstable; urgency=low
 
   * Adapted to recent changes in ReMake
 
  -- Ralf Kaestner <ralf.kaestner@gmail.com>  Tue, 08 Sep 2009 07:50:14 +0200
 
-libcan (0.1-25) unstable; urgency=low
+libcan (0.1-24) unstable; urgency=low
 
   * Doc package is architecture independent
 
  -- Ralf Kaestner <ralf.kaestner@gmail.com>  Sat, 05 Sep 2009 14:23:48 +0200
 
-libcan (0.1-24) unstable; urgency=low
+libcan (0.1-23) unstable; urgency=low
 
   * libcan documentation cleanups
 
  -- Ralf Kaestner <ralf.kaestner@gmail.com>  Sat, 05 Sep 2009 12:45:11 +0200
 
-libcan (0.1-23) unstable; urgency=low
+libcan (0.1-22) unstable; urgency=low
 
   * Adapted to remake_find_library() changes
 
  -- Ralf Kaestner <ralf.kaestner@gmail.com>  Sat, 05 Sep 2009 11:28:08 +0200
 
-libcan (0.1-22) unstable; urgency=low
+libcan (0.1-21) unstable; urgency=low
 
   * Corrected libcan project home
 
  -- Ralf Kaestner <ralf.kaestner@gmail.com>  Sat, 05 Sep 2009 11:01:34 +0200
 
-libcan (0.1-21) unstable; urgency=low
+libcan (0.1-20) unstable; urgency=low
 
   * libcan ReMake port and packaging
 
  -- Ralf Kaestner <ralf.kaestner@gmail.com>  Sat, 05 Sep 2009 10:19:10 +0200
 
-libcan (0.1-20) unstable; urgency=low
+libcan (0.1-19) unstable; urgency=low
 
   * libcan-cpc compiles
 
  -- Ralf Kaestner <ralf.kaestner@gmail.com>  Fri, 04 Sep 2009 23:03:17 +0200
 
-libcan (0.1-19) unstable; urgency=low
+libcan (0.1-18) unstable; urgency=low
 
   * libcan initial revision
 
