--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+libcan (0.1-41) unstable; urgency=low
+
+  * Added doxygen build dependency
+
+ -- Ralf Kaestner <ralf.kaestner@gmail.com>  Thu, 11 Jul 2013 21:43:00 +0100
+
 libcan (0.1-40) unstable; urgency=low
 
   * No changes, making changelog revision consistent with number of git
