--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+libcan (0.1-42) unstable; urgency=low
+
+  * Renamed libcan into libcan-interface for alternative configuration
+  * Added alternatives for switching between libcan-serial and libcan-cpc
+
+ -- Ralf Kaestner <ralf.kaestner@gmail.com>  Fri, 12 Jul 2013 11:11:00 +0100
+
 libcan (0.1-41) unstable; urgency=low
 
   * Added doxygen build dependency
