--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+libcan (0.1-45) unstable; urgency=low
+
+  * Overriding soname linker flag for dynamically linking alternatives
+
+ -- Ralf Kaestner <ralf.kaestner@gmail.com>  Fri, 12 Jul 2013 14:48:00 +0100
+
 libcan (0.1-44) unstable; urgency=low
 
   * Forcing linkage to libcan-interface
