--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+libcan (0.1-46) unstable; urgency=low
+
+  * Removed libcan-interface in favor of slim linkage
+  * Added pkg-config file
+
+ -- Ralf Kaestner <ralf.kaestner@gmail.com>  Fri, 26 Jul 2013 09:17:00 +0100
+
 libcan (0.1-45) unstable; urgency=low
 
   * Overriding soname linker flag for dynamically linking alternatives
