* Added can-usb library for CAN communication via EPOS2 FTDI interfaces * Added flow control parameter to can-serial * Revised preprocessor defines naming conventions * Revised documentation

--- a/changelog
+++ b/changelog
@@ -1,3 +1,12 @@
+libcan (0.1-49) unstable; urgency=low
+
+  * Added can-usb library for CAN communication via EPOS2 FTDI interfaces
+  * Added flow control parameter to can-serial
+  * Revised preprocessor defines naming conventions
+  * Revised documentation
+
+ -- Ralf Kaestner <ralf.kaestner@gmail.com>  Fri, 18 Oct 2013 10:07:00 +0100
+
 libcan (0.1-48) unstable; urgency=low
 
   * Added pkg-config dependency on tulibs
