--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+libcan (0.2-51) unstable; urgency=low
+
+  * Fixed minor version in top-level CMakeLists.txt
+
+ -- Ralf Kaestner <ralf.kaestner@gmail.com>  Wed, 06 Nov 2013 17:57:00 +0100
+ 
 libcan (0.2-50) unstable; urgency=low
 
   * Adapted initialization functions to revised tulibs config module
