--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+libcan (0.2-52) unstable; urgency=low
+
+  * Parameter description tweaks
+
+ -- Ralf Kaestner <ralf.kaestner@gmail.com>  Thu, 07 Nov 2013 09:54:00 +0100
+ 
 libcan (0.2-51) unstable; urgency=low
 
   * Fixed minor version in top-level CMakeLists.txt
