--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+libcan (0.2-53) unstable; urgency=low
+
+  * USB and serial can_send_message() now test for the number of bytes
+    transmitted
+
+ -- Ralf Kaestner <ralf.kaestner@gmail.com>  Thu, 07 Nov 2013 11:01:00 +0100
+ 
 libcan (0.2-52) unstable; urgency=low
 
   * Parameter description tweaks
