--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+libcan (0.2-54) unstable; urgency=low
+
+  * A minor code cleanup
+
+ -- Ralf Kaestner <ralf.kaestner@gmail.com>  Thu, 07 Nov 2013 12:38:00 +0100
+ 
 libcan (0.2-53) unstable; urgency=low
 
   * USB and serial can_send_message() now test for the number of bytes
