--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+libcan (0.3-59) unstable; urgency=low
+
+  * First revision accounting for tulibs changes
+  * Increased minor version
+
+ -- Ralf Kaestner <ralf.kaestner@gmail.com>  Thu, 28 Nov 2013 16:38:00 +0100
+ 
 libcan (0.2-58) unstable; urgency=low
 
   * Removed comments from postinst and prerm scripts
