--- a/changelog
+++ b/changelog
@@ -1,3 +1,10 @@
+libcan (0.3-61) unstable; urgency=low
+
+  * Some bug fixes which should prevent can_device_open() in CAN-USB library
+    from segfaulting
+
+ -- Ralf Kaestner <ralf.kaestner@gmail.com>  Fri, 29 Nov 2013 19:04:00 +0100
+ 
 libcan (0.3-60) unstable; urgency=low
 
   * Minor documentation tweaks
