--- a/changelog
+++ b/changelog
@@ -1,3 +1,9 @@
+libcan (0.3-62) unstable; urgency=low
+
+  * Release distribution for Ubuntu Trusty Tahr
+
+ -- Ralf Kaestner <ralf.kaestner@gmail.com>  Wed, 24 Sep 2014 13:15:00 +0100
+ 
 libcan (0.3-61) unstable; urgency=low
 
   * Some bug fixes which should prevent can_device_open() in CAN-USB library
